RESOLVED FIXED144274
[iOS] Video not centered in element on retina devices
https://bugs.webkit.org/show_bug.cgi?id=144274
Summary [iOS] Video not centered in element on retina devices
Jer Noble
Reported 2015-04-27 13:29:55 PDT
[iOS] Video not centered in element on retina devices
Attachments
Patch (2.16 KB, patch)
2015-04-27 14:22 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2015-04-27 14:22:08 PDT
WebKit Commit Bot
Comment 2 2015-04-27 15:25:21 PDT
Comment on attachment 251775 [details] Patch Clearing flags on attachment: 251775 Committed r183431: <http://trac.webkit.org/changeset/183431>
WebKit Commit Bot
Comment 3 2015-04-27 15:25:25 PDT
All reviewed patches have been landed. Closing bug.
Jon Lee
Comment 4 2015-05-04 11:05:53 PDT
Note You need to log in before you can comment on or make changes to this bug.