[iOS] Video not centered in element on retina devices https://bugs.webkit.org/show_bug.cgi?id=144274

Reviewed by Simon Fraser.

In r173702, a transform was added to the video layer (and a matching, inverse transform
in the UIProcess), but this transform affects the position property of the video layer
used to position the video content within the element bounds when their aspect ratios
do not match.

To work around this problem, pre-apply the transform during -setPosition:.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(-[WebVideoContainerLayer setPosition:]):


Canonical link: https://commits.webkit.org/162293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183431 268f45cc-cd09-0410-ab3c-d52691b4dbfc