Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm
@@ -115,6 +115,15 @@ template <> struct iterator_traits<HashSet<RefPtr<WebCore::MediaSelectionOptionA
     for (CALayer* layer in self.sublayers)
         layer.frame = bounds;
 }
+
+- (void)setPosition:(CGPoint)position
+{
+    if (!CATransform3DIsIdentity(self.transform)) {
+        // Pre-apply the transform added in the WebProcess to fix <rdar://problem/18316542> to the position.
+        position = CGPointApplyAffineTransform(position, CATransform3DGetAffineTransform(self.transform));
+    }
+    [super setPosition:position];
+}
 @end
 
 #if ENABLE(AVF_CAPTIONS)
